// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResearchEditorOverview > handles empty updates 1`] = `
<div>
  <div
    class="css-u349le-Box"
  >
    <h3
      class="css-1ycqext-Box"
    >
      Research overview
    </h3>
    <button
      class="css-1hxcni7-Box"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-1peva9n-Box"
      >
        <a
          class="css-9gmhzp-Box"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-1yzkb2q-Box"
      type="button"
    >
      <span
        class="css-1peva9n-Box"
      >
        <a
          class="css-9gmhzp-Box"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > handles falsey updates 1`] = `
<div>
  <div
    class="css-u349le-Box"
  >
    <h3
      class="css-1ycqext-Box"
    >
      Research overview
    </h3>
    <button
      class="css-1hxcni7-Box"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-1peva9n-Box"
      >
        <a
          class="css-9gmhzp-Box"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-1yzkb2q-Box"
      type="button"
    >
      <span
        class="css-1peva9n-Box"
      >
        <a
          class="css-9gmhzp-Box"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > renders correctly 1`] = `
<div>
  <div
    class="css-u349le-Box"
  >
    <h3
      class="css-1ycqext-Box"
    >
      Research overview
    </h3>
    <ul
      class="css-ozht5o-Box"
    >
      <li
        class="css-1cpoejb-Box"
      >
        <span
          class="css-1mkhdrb-Box"
        >
          <strong>
            Update 1
          </strong>
        </span>
      </li>
      <li
        class="css-1cpoejb-Box"
      >
        <span
          class="css-1mkhdrb-Box"
        >
          Update 2
          <a
            class="css-1uvpm5b-Box"
            href="/research/abc/edit-update/update-2"
          >
            Edit
          </a>
        </span>
      </li>
      <li
        class="css-1cpoejb-Box"
      >
        <span
          class="css-1mkhdrb-Box"
        >
          Update 3
          <a
            class="css-1uvpm5b-Box"
            href="/research/abc/edit-update/update-3"
          >
            Edit
          </a>
        </span>
      </li>
    </ul>
    <button
      class="css-1hxcni7-Box"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-1peva9n-Box"
      >
        <a
          class="css-9gmhzp-Box"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-1yzkb2q-Box"
      type="button"
    >
      <span
        class="css-1peva9n-Box"
      >
        <a
          class="css-9gmhzp-Box"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;
